WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284109
[Skia] Unreviewed build fix for GLib platforms
https://bugs.webkit.org/show_bug.cgi?id=284109
Summary
[Skia] Unreviewed build fix for GLib platforms
Alicia Boya García
Reported
2024-12-05 07:05:50 PST
skia/core/SkTypeface.h transitively includes some inline functions that use C-style buffer access, making the clang build fail due to strict mode. This patch adds a WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE guard around the affected include directive, as it is the case in other places where Skia is included. * Source/WebCore/platform/graphics/skia/FontVariationsSkia.h:
Attachments
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2024-12-05 07:06:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37497
EWS
Comment 2
2024-12-05 08:59:26 PST
Committed
287400@main
(084403702340): <
https://commits.webkit.org/287400@main
> Reviewed commits have been landed. Closing PR #37497 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug