[Skia] Unreviewed build fix for GLib platforms https://bugs.webkit.org/show_bug.cgi?id=284109

skia/core/SkTypeface.h transitively includes some inline functions that
use C-style buffer access, making the clang build fail due to strict
mode.

This patch adds a WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE guard around
the affected include directive, as it is the case in other places where
Skia is included.

* Source/WebCore/platform/graphics/skia/FontVariationsSkia.h:

Canonical link: https://commits.webkit.org/287400@main